# programs-with-bugs

./: Cargo.toml  README.md
_07_result/: Cargo.toml  README.md
_08_error_mapping/: Cargo.toml
bug_01_borrowing/: Cargo.toml
bug_01_borrowing/src/: main.rs
bug_02_lifetimes/: Cargo.toml
bug_02_lifetimes/src/: main.rs
bug_04_iterators/: Cargo.toml  README.md
bug_04_iterators/examples/: iter_next.rs
bug_04_iterators/src/: iterators_01.rs
bug_04_iterators/src/suggestion/: iterators_01.rs
bug_04_iterators/ts_code/: iterators_01.ts
bug_07_result/: Cargo.toml  README.md
bug_07_result/src/: divider.rs  file_reader.rs  lib.rs
bug_08_error_mapping/: Cargo.toml  README.md
bug_08_error_mapping/src/: lib.rs
bug_09_traits/: Cargo.toml  README.md
bug_09_traits/src/: lib.rs
